# EUI-NEO

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  main.cpp  readme.md  readme.zh-CN.md
.github/workflows/: android-apk.yml  pages.yml  release.yml
3rd/: README.md  dependencies.cmake
Android/: README.md  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: android_app.cpp
Android/app/src/main/java/com/sudoevolve/euineo/: MainActivity.java
Android/app/src/main/res/values/: styles.xml
Android/cmake/: CMakeLists.txt  eui_android_app.cmake
Android/gradle/wrapper/: gradle-wrapper.properties
Android/scripts/: build-apk.ps1
app/: app.h  basic_demo.cpp  calculator_demo.cpp  calculator_logic.h  center_combo_demo.cpp  clock_demo.cpp  demo.cpp  demo1.cpp  dsl_app.h  gallery.cpp  listview_demo.cpp
apps/eui_designer/: app.cpp  designer_codegen.cpp  designer_codegen.h
apps/sidebar_starter/: app.cpp
cmake/: EUIExamples.cmake  EuiCpm.cmake  EuiDependencies.cmake  EuiDependencyHelpers.cmake
cmake/Modules/: FindZLIB.cmake
components/: barchart.h  button.h  card.h  carousel.h  checkbox.h  colorpicker.h  components.h  contextmenu.h  datatable.h  datepicker.h  dialog.h  dropdown.h  input.h  input_model.h  layout_debug.h  linechart.h  markdown.h  navbar.h  panel.h  piechart.h  progress.h  radio.h  scroll.h  scrollview.h  segmented.h  sidebar.h  slider.h  stepper.h  switch.h  tabs.h  text.h  theme.h  timepicker.h  toast.h  tooltip.h  virtuallist.h
components/workshop/: card_slider.h  heart_switch.h  neumorphic_button.h  tilt_card.h
core/: animation.h  dsl.h  dsl_runtime.h  event.h  image.cpp  layout.h  primitive.h  text.cpp  text.h
core/app/: app_runner.h  dsl_window_runtime.h  sdl2_app_main.cpp  sdl3_app_main.cpp
core/input/: input_state.h
core/platform/: network.cpp  performance_stats.cpp  platform.cpp  platform.h
core/render/: image_facade.cpp  image_source.cpp  primitive_geometry.h  render_backend.cpp  render_backend.h  text.cpp  video.cpp  video.h  video_source.cpp  video_source.h
core/render/opengl/: opengl_backend.cpp  opengl_backend.h  opengl_primitives.cpp  opengl_text.cpp
core/render/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_image.cpp  vulkan_image_shaders.h  vulkan_polygon_shaders.h  vulkan_text.cpp  vulkan_text_shaders.h
core/render/vulkan/shaders/: image.frag  image.vert  text.frag  text.vert
core/runtime/: runtime_animation.h  runtime_geometry.h  runtime_input.h  runtime_instances.h  runtime_lifecycle.h  runtime_render.h  runtime_state_bindings.h  runtime_update.h
core/window/: window_backend.cpp
docs/: DSL.md  README.md  backend-abstraction-checklist.md  backend-abstraction-issue.md  concise-ui-syntax-proposal.zh-CN.md  framework-revamp-proposal.zh-CN.md  include-cleanup-record.zh-CN.md  modern-gl-first-roadmap.zh-CN.md  modern-gl-roadmap.zh-CN.md  project-structure.zh-CN.md  quick-decoupling-status.zh-CN.md  quick-ui-tutorial.zh-CN.md  ui_dsl_analysis.md  事件.md  动画.md  图片.md  基础图元文本图元.md  布局.md  开发与发布.md  渲染后端架构.md  渲染流程.md  状态.md  稳定版路线图.md  窗口页面.md  组件.md  集成指南.md
docs/guide/: components-and-custom-node.md  getting-started.md  index.md  layout-and-anchor.md  listview.md  performance-analysis.md  primitives.md  rendering-strategy-migration.md  runtime-network-fonts.md
docs/skills/eui-neo-ui-replicator/: SKILL.md
examples/: EUI_gallery.cpp  EUI_gallery_icons.json  anchor_and_position_demo.cpp  anchor_layout_demo.cpp  basic_widgets_demo.cpp  calculator_demo.cpp  chat.cpp  gallery.cpp  graphics_showcase_demo.cpp  image_texture_demo.cpp  multi_scrollbars_demo.cpp  sidebar_navigation_demo.cpp
examples/pages/: gallery_about.h  gallery_animation.h  gallery_controls.h  gallery_style.h
include/: EUI.h  eui_neo.h
include/eui/: animation.h  app.h  core.h  graphics.h  image.h  quick.h  renderer.h  runtime.h  signal.h  video.h
include/eui/animation/: animator.h  easing.h  timeline.h
include/eui/app/: frame_context.h  options.h
include/eui/app/detail/: app_entry_detail.inl  dirty_cache_detail.inl  font_renderers_detail.inl  glfw_run_loop_detail.inl  glfw_runtime_detail.inl  modern_gl_detail.inl  opengl_renderer_detail.inl  runtime_state_detail.inl  sdl2_run_loop_detail.inl  sdl2_runtime_detail.inl  text_support_detail.inl
include/eui/core/: context_fwd.h  context_state.h  context_text_measure.h  context_utils.h  foundation.h
include/eui/graphics/: effects.h  primitives.h  transforms.h
include/eui/quick/: ui.h
include/eui/quick/detail/: anchor_spec.h  primitive_painter.h
include/eui/renderer/: contracts.h  draw_data_adapter.h
include/eui/runtime/: contracts.h  frame_context.h
site/: app.js  index.html  styles.css
src/: EUINEO.cpp  EUINEO.h
src/app/: DslAppRuntime.h
src/components/: Button.cpp  Button.h  Checkbox.h  ComboBox.cpp  ComboBox.h  CustomNodeTemplate.h  Dialog.h  Image.h  InputBox.cpp  InputBox.h  Label.cpp  Label.h  ListView.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  Radio.h  ScrollArea.h  SegmentedControl.cpp  SegmentedControl.h  Sidebar.h  Slider.cpp  Slider.h  Switch.h  TextArea.h  Tooltip.h
src/pages/: AnimationPage.h  HomePage.h  LayoutPage.h  MainPage.cpp  MainPage.h  MainPageView.h
src/ui/: UIBuilder.h  UIComponents.def  UIContext.cpp  UIContext.h  UINode.h  UIPrimitive.cpp  UIPrimitive.h
tests/docs/: CPU_GPU占用对比.md  内存占用对比.md
tests/probes/: render_clear_probe.cpp  render_context_probe.cpp  window_only_probe.cpp
tests/unit/: ime_rect.cpp  input_model.cpp  layout_numeric.cpp  signal.cpp  ui_state.cpp
